增加配置文件来控制

--- a/dmRpc/dmRpc.vcxproj
+++ b/dmRpc/dmRpc.vcxproj
@@ -148,6 +148,7 @@
     <None Include="dmsoft.proto" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="config.hpp" />
     <ClInclude Include="dmObj.h" />
     <ClInclude Include="dmObjHelp.h" />
     <ClInclude Include="DmRpcImpl.h" />
