--- a/dmRpc/dmRpc.vcxproj.filters
+++ b/dmRpc/dmRpc.vcxproj.filters
@@ -55,5 +55,8 @@
     <ClInclude Include="dmObjHelp.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="config.hpp">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
